--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -15,3 +15,59 @@
         transition: all ease 0.3s;
     }
 }
+
+@mixin btnStyleV2 {
+    background: none;
+    border: solid 1px $brendColor;
+    border-radius: 10px;
+    color: $textColor;
+    font-weight: 400;
+    font-size: 16px;
+    background: $brendColor;
+    line-height: 19px;
+    transition: all ease 0.3s;
+
+    &:hover {
+        background: $textColor;
+        color: $bgColor;
+        border: solid 1px $textColor;
+        transition: all ease 0.3s;
+    }
+}
+
+@mixin btnStyleV3 {
+    background: none;
+    border: solid 1px $textColor;
+    border-radius: 10px;
+    color: $textColor;
+    font-weight: 300;
+    font-size: 16px;
+    background: none;
+    line-height: 19px;
+    transition: all ease 0.3s;
+
+    &:hover {
+        background: $textColor;
+        color: $bgColor;
+        border: solid 1px $textColor;
+        transition: all ease 0.3s;
+    }
+}
+
+@mixin btnStyleInp {
+    background: none;
+    border: solid 1px $bgColor;
+    border-radius: 10px;
+    color: $brendColor;
+    font-weight: 400;
+    font-size: 16px;
+    background: none;
+    line-height: 19px;
+    transition: all ease 0.3s;
+
+    &:hover {
+        background: $brendColor;
+        color: $textColor;
+        transition: all ease 0.3s;
+    }
+}
