--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,6 +6,8 @@
 @import "sourse";
 @import "header";
 @import "home";
+@import "catalog";
+@import "card";
 @import "footer";
 @import "buttons";
 @import "popups";
