--- a/app/scss/_popups-style.scss
+++ b/app/scss/_popups-style.scss
@@ -313,6 +313,387 @@
     display: none;
 }
 
+//add questions
+.add-questions {
+    width: 590px;
+
+    .autorization-popup__form {
+        padding: 56px 80px;
+        width: 100%;
+
+        .autorization-popup__form-inp {
+            margin-top: 50px;
+        }
+
+        .autorization-popup__btn-wrapper {
+            margin-top: 50px;
+        }
+    }
+}
+
+//add reviews
+.add-review {
+    width: 590px;
+
+    .autorization-popup__form {
+        padding: 56px 80px;
+        width: 100%;
+
+        .autorization-popup__form-inp {
+            margin-top: 50px;
+        }
+
+        .autorization-popup__btn-wrapper {
+            margin-top: 50px;
+        }
+    }
+}
+
+.rate-inp-conteiner {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+
+    p {
+        font-size: 14px;
+        line-height: 16px;
+        /* identical to box height */
+        font-weight: 300;
+        color: #97A3B7;
+        margin-right: 20px;
+    }
+}
+
+.rate-inp-conteiner__row {
+    display: flex;
+}
+
+.rate-inp-conteiner__star {
+    width: 24px;
+    height: 24px;
+    margin-right: 14px;
+    background-image: url('../img/_src/star-def.svg');
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    transition: all ease 0.3s;
+
+    &:hover {
+        transform: scale(1.2);
+        transition: all ease 0.3s;
+    }
+}
+
+.rate-inp-conteiner__star_active {
+    background-image: url('../img/_src/star-act-black.svg');
+    transition: all ease 0.3s;
+}
+
+
+//one click popup 
+.one-click-buy {
+    padding: 109px 15px 109px 45px;
+    max-width: 1120px;
+    width: 1120px;
+    background: $textColor;
+    max-height: 100vh;
+    border-radius: 10px;
+
+    form {
+        margin-top: 0;
+    }
+
+    .autorization-popup__form {
+        width: 430px;
+    }
+
+}
+
+.one-click-buy__wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.one-click-buy__product-info {
+    width: 515px;
+}
+
+.product-info-popup__image {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        max-height: 100%;
+        max-width: 100%;
+        display: block;
+    }
+}
+
+.product-info-popup__price-row {
+    margin-top: 50px;
+    font-size: 36px;
+    line-height: 42px;
+    font-weight: 400;
+    color: $bgColor;
+}
+
+.product-info-popup__delivery-row {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    p {
+        font-size: 20px;
+        line-height: 23px;
+        font-weight: 300;
+        color: $bgColor;
+    }
+
+    a {
+        font-size: 16px;
+        line-height: 19px;
+        text-align: right;
+        text-decoration-line: underline;
+        font-weight: 300;
+        color: #97A3B7;
+    }
+}
+
+
+//frame popup
+.pay-frame {
+    border-radius: 10px;
+    width: 550px;
+    background: $textColor;
+}
+
+.pay-frame__wrapper {
+    padding: 35px;
+    max-height: 768px;
+    overflow-y: auto;
+    border-radius: 10px;
+}
+
+.pay-frame__img {
+    width: 100%;
+    display: block;
+}
+
+
+//shipping cart
+.shipping-cart {
+    padding-right: 0;
+
+    .product-info-popup__delivery-row {
+        padding-right: 20px;
+    }
+
+    .one-click-buy__product-info {
+        width: 550px;
+    }
+
+    .one-click-buy__wrapper {
+        align-items: flex-start;
+    }
+}
+
+.cart-element {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    border-bottom: 1px solid #111B32;
+    padding-bottom: 3px;
+    margin-bottom: 53px;
+    position: relative;
+}
+
+.cart-element__close {
+    width: 25px;
+    position: absolute;
+    z-index: 10;
+    cursor: pointer;
+    right: 10px;
+    top: -25px;
+
+    img {
+        width: 100%;
+        display: block;
+    }
+}
+
+.cart-element__image {
+    width: 60px;
+    height: 60px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
+
+.cart-element__title {
+    width: 200px;
+    font-size: 20px;
+    line-height: 23px;
+    font-weight: normal;
+
+    a {
+        color: $bgColor;
+    }
+}
+
+.cart-element__counter-wrapper {
+    width: 90px;
+    display: flex;
+    align-items: center;
+}
+
+.cart-element__input-counter {
+    width: calc(100% - 50px);
+    text-align: center;
+    background: none;
+    border: none;
+    font-size: 30px;
+}
+
+.cart-element__count-btn {
+    width: 24px;
+    cursor: pointer;
+
+    svg {
+        width: 100%;
+        display: block;
+        height: auto;
+
+        path {
+            transition: all ease 0.3s;
+        }
+
+        &:hover {
+            path {
+                stroke: #D83E3E;
+                transition: all ease 0.3s;
+            }
+        }
+    }
+}
+
+.cart-element__price {
+    width: 150px;
+    font-size: 30px;
+    font-weight: 400;
+    color: $bgColor;
+}
+
+
+//product slider popups
+
+
+.slider-product {
+    width: 550px;
+}
+
+.big-slider-popup__element-wrapper {
+    height: 550px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+        display: block;
+    }
+}
+
+.big-slider-popup {
+    display: flex;
+    align-items: center;
+
+    .prev-ar_slide {
+        transform: rotate(180deg);
+        left: -27.5px;
+    }
+
+    .next-ar_slide {
+        right: -27.5px;
+    }
+}
+
+.slider-product__smal-slider {
+    margin: 0 auto;
+    margin-top: 40px;
+    width: calc(100% - 110px);
+}
+
+.ar_slier-popup {
+    position: absolute;
+    z-index: 20;
+    width: 55px;
+    height: 55px;
+    background-image: url('../img/_src/ar-popup-slider.svg');
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+}
+
+.smal-slider-popup__element {
+    padding: 0 15px;
+}
+
+.smal-slider-popup__element-wrapper {
+    width: 100%;
+    height: 87px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    overflow: hidden;
+    border: solid 1px rgba(0, 0, 0, 0);
+    transition: all ease 0.3s;
+    cursor: pointer;
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+        display: block;
+        opacity: 0.3;
+        transition: all ease 0.3s;
+
+        &:hover {
+            transform: scale(1.13);
+            transition: all ease 0.3s;
+            opacity: 1;
+        }
+    }
+}
+
+.slick-current {
+    .smal-slider-popup__element-wrapper {
+        border: solid 1px $textColor;
+
+        img {
+            opacity: 1;
+        }
+    }
+}
+
+
+
 @media only screen and (max-width: 1250px) {
     .autorization-popup .air-close {
         right: 0;
@@ -340,8 +721,21 @@
 
     .video-popup .air-close {
         right: 0;
+    }
 
+    .one-click-buy {
+        width: 100%;
+        height: 100vh;
+        overflow-y: auto;
 
+        .air-close {
+            background: url('../img/_src/close.svg');
+            background-size: cover;
+            background-position: center;
+            top: 50px;
+            right: 50px;
+            width: 50px;
+        }
     }
 }
 
@@ -399,6 +793,57 @@
         display: block;
         margin-bottom: 80px;
     }
+
+    .add-review,
+    .add-questions,
+    .pay-frame {
+        width: 100%;
+        height: 100vh;
+        background: $textColor;
+        display: flex;
+        justify-content: center;
+        overflow-y: auto;
+        padding-top: 55px;
+
+        .air-close {
+            background: url('../img/_src/close.svg');
+            background-size: cover;
+            background-position: center;
+            top: 50px;
+            right: 50px;
+            width: 50px;
+        }
+
+        .autorization-popup__form {
+            max-width: 550px;
+            padding: 35px 0;
+        }
+    }
+
+    .pay-frame__wrapper {
+        max-height: 10000px;
+    }
+
+    .one-click-buy__wrapper {
+        flex-wrap: wrap;
+        justify-content: center;
+
+        .autorization-popup__form {
+            width: 540px;
+            order: 1;
+            margin-top: 100px;
+        }
+    }
+
+    .one-click-buy {
+        border-radius: 0;
+        padding: 50px;
+    }
+
+    .shipping-cart {
+        padding-top: 90px;
+    }
+
 }
 
 @media only screen and (max-width: 750px) {
@@ -443,5 +888,131 @@
         margin-top: 30px;
     }
 
+    .one-click-buy {
+        padding: 25px 30px;
+    }
+
+    .product-info-popup__image {
+        height: 258px;
+    }
+
+    .product-info-popup__price-row {
+        margin-top: 20px;
+        font-size: 24px;
+        line-height: 28px;
+    }
+
+    .product-info-popup__delivery-row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+
+        p {
+            width: 100%;
+            margin-bottom: 8px;
+        }
+    }
+
+    .one-click-buy__wrapper .autorization-popup__form {
+        margin-top: 30px;
+        width: 100%;
+    }
+
+    .shipping-cart .one-click-buy__product-info {
+        width: 100%;
+    }
+
+    .shipping-cart {
+        padding-top: 100px;
+    }
+
+    .add-questions .air-close,
+    .add-review .air-close,
+    .pay-frame .air-close {
+        right: 25px;
+        top: 25px;
+        width: 35px;
+    }
+
+    .pay-frame__wrapper {
+        padding-top: 0;
+    }
+
+    .one-click-buy .air-close {
+        right: 25px;
+        top: 25px;
+        width: 35px;
+    }
+
+    .cart-element__image {
+        display: none;
+    }
+
+    .cart-element__price {
+        font-size: 16px;
+        line-height: 26px;
+        width: 90px;
+    }
+
+    .cart-element__title {
+        width: 131px;
+        font-size: 16px;
+        line-height: 19px;
+    }
+
+    .cart-element__close {
+        right: 0;
+    }
+
+    .one-click-buy {
+        .autorization-popup__btn-wrapper {
+            margin-top: 0;
+        }
+    }
+
+    .add-review {
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-bottom: 50px;
+
+        .autorization-popup__form {
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+    }
+
+    .slider-product {
+        width: calc(100% - 50px);
+
+        .air-close {
+            right: -17px;
+        }
+    }
+
+    .ar_slier-popup {
+        width: 35px;
+        height: 35px;
+    }
+
+    .big-slider-popup .next-ar_slide {
+        right: -17px;
+    }
+
+    .big-slider-popup .prev-ar_slide {
+        left: -17px;
+    }
+
+    .big-slider-popup__element-wrapper {
+        height: 300px;
+    }
+
+    .add-questions {
+        padding: 50px 30px;
+
+        .autorization-popup__form {
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+    }
 
 }
