--- a/app/scss/_popups-style.scss
+++ b/app/scss/_popups-style.scss
@@ -692,6 +692,13 @@
     }
 }
 
+.slider-product {
+    padding: 10px 0 10px;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.5);
+
+}
+
 
 
 @media only screen and (max-width: 1250px) {
