--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,7 +1,9 @@
 $mainFont: 'FenomenSans';
+$interFont: 'Inter', sans-serif;
 
 $brendColor: #BEAF90;
 $textColor: #fff;
 $bgColor: #060910;
 $black: #000;
 $blue: #0C21C1;
+$grey: #B5B4B4;
