--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -8,6 +8,10 @@
 @import "home";
 @import "catalog";
 @import "card";
+@import "news";
+@import "post";
+@import "about";
+@import "comparison";
 @import "footer";
 @import "buttons";
 @import "popups";
