--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -12,6 +12,7 @@
 @import "post";
 @import "about";
 @import "comparison";
+@import "cart";
 @import "footer";
 @import "buttons";
 @import "popups";
