--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -13,6 +13,7 @@
 @import "about";
 @import "comparison";
 @import "cart";
+@import "delivery";
 @import "footer";
 @import "buttons";
 @import "popups";
