--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -14,6 +14,7 @@
 @import "comparison";
 @import "cart";
 @import "delivery";
+@import "services";
 @import "footer";
 @import "buttons";
 @import "popups";
