--- a/app/scss/_popups-style.scss
+++ b/app/scss/_popups-style.scss
@@ -1023,3 +1023,329 @@
     }
 
 }
+
+
+//FAQ form
+.add-faq {
+    background: #fff;
+    padding: 48px 95px;
+    border-radius: 10px;
+    width: 550px;
+    max-height: 100vh;
+    overflow-y: auto;
+
+    .air-close {
+        width: 40px;
+        height: 40px;
+        background-image: url('../img/_src/close-faq.svg');
+        top: 48px;
+        right: 30px;
+    }
+}
+
+.add-faq__logo {
+    width: 172px;
+    margin: 0 auto;
+
+    img {
+        width: 100%;
+        display: block;
+    }
+}
+
+.add-faq__title {
+    text-align: center;
+    margin-top: 31px;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #959393;
+    font-weight: 300;
+}
+
+.add-faq__form-wrapper {
+    margin-top: 32px;
+}
+
+.add-faq__inp {
+    margin-bottom: 16px;
+
+    input,
+    textarea {
+        background: rgba(217, 217, 217, 0.3);
+        border-radius: 10px;
+        padding: 16px;
+        border: solid 1px rgba(217, 217, 217, 0.3);
+        font-size: 16px;
+        line-height: 19px;
+        color: $brendColor;
+        font-weight: 300;
+        width: 100%;
+        transition: all ease 0.3s;
+
+        &::placeholder {
+            color: #B5B4B4;
+            transition: all ease 0.3s;
+        }
+
+        &:focus {
+            border: solid 1px $brendColor;
+            transition: all ease 0.3s;
+        }
+    }
+
+    textarea {
+        height: 178px;
+        resize: none;
+    }
+}
+
+.add-faq__form-row {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 32px;
+
+    button,
+    input {
+        margin: 0 8px;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .add-faq {
+        width: 100%;
+        border-radius: 0;
+    }
+}
+
+@media only screen and (max-width: 490px) {
+    .add-faq {
+        padding: 40px 30px;
+        min-height: 100vh;
+    }
+}
+
+
+
+//select gegion form
+.select-region-form {
+    background: #fff;
+    padding: 50px 96px;
+    border-radius: 10px;
+    width: 840px;
+    max-height: 100vh;
+    overflow-y: auto;
+
+    .air-close {
+        width: 40px;
+        height: 40px;
+        background-image: url('../img/_src/close-faq.svg');
+        top: 57px;
+        right: 96px;
+    }
+}
+
+.select-region-form__title {
+    font-size: 32px;
+    line-height: 48px;
+    color: #3A3A3A;
+}
+
+.region-table {
+    margin-top: 64px;
+    border-radius: 10px;
+    overflow: hidden;
+    border: 1px solid #E6E6E6;
+}
+
+.region-table__header {
+    background: rgba(94, 112, 243, 0.2);
+}
+
+.region-table__row {
+    display: flex;
+    align-items: center;
+}
+
+.region-table__element {
+    width: 50%;
+    font-size: 20px;
+    line-height: 32px;
+    font-weight: 600;
+    color: #060910;
+    padding: 12px 14px;
+}
+
+.region-table__body {
+    max-height: 630px;
+    overflow-y: auto;
+
+    .region-table__row {
+
+        .region-table__element {
+            border-bottom: 1px solid #E6E6E6;
+
+            &:last-child {
+                width: calc(50% - 59px);
+            }
+        }
+
+        &:last-child {
+            .region-table__element {
+                border-bottom: none;
+            }
+        }
+    }
+}
+
+.region-table__body::-webkit-scrollbar {
+    width: 6px;
+
+}
+
+.region-table__body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #E6E6E6;
+    background: #E6E6E6;
+    border-radius: 10px;
+
+}
+
+.region-table__body::-webkit-scrollbar-thumb {
+    background-color: #5E70F3;
+    outline: 1px solid #5E70F3;
+    border-radius: 10px;
+}
+
+@media only screen and (max-width: 750px) {
+    .select-region-form {
+        width: 100%;
+        height: 100vh;
+        border-radius: 0;
+
+        .air-close {
+            top: 35px;
+            right: 30px;
+        }
+    }
+
+    .select-region-form {
+        padding: 30px;
+    }
+
+    .select-region-form__title {
+        font-size: 24px;
+    }
+
+    .region-table {
+        margin-top: 30px;
+        max-height: 80vh;
+    }
+
+    .region-table__element {
+        font-size: 12px;
+    }
+
+    .region-table__body .region-table__row .region-table__element:last-child {
+        width: calc(50% - 20px);
+    }
+
+    .region-table__element {
+        padding: 8px;
+    }
+
+}
+
+
+//rules popup 
+.rules-popup {
+    background: #fff;
+    width: 1120px;
+    padding: 56px 60px;
+    border-radius: 10px;
+    max-height: 100vh;
+    overflow-y: auto;
+
+    .air-close {
+        width: 40px;
+        height: 40px;
+        background-image: url('../img/_src/close-faq.svg');
+        top: 62px;
+        right: 60px;
+    }
+}
+
+.rules-popup__list {
+    margin-top: 50px;
+    column-count: 2;
+
+    li {
+        padding-left: 24px;
+        margin-bottom: 16px;
+        font-size: 14px;
+        line-height: 16px;
+        color: #9E9C9C;
+        font-weight: 300;
+        padding-right: 8px;
+        position: relative;
+
+        a {
+            color: #5E70F3;
+        }
+
+        &:before {
+            width: 16px;
+            height: 16px;
+            background-image: url('../img/_src/sale-rules.svg');
+            position: absolute;
+            content: "";
+            background-size: cover;
+            background-position: center;
+            left: 0;
+            top: 0;
+        }
+    }
+}
+
+@media only screen and (max-width: 1140px) {
+    .rules-popup {
+        width: 96%;
+    }
+
+    .select-region-form__title {
+        padding-right: 50px;
+        line-height: 1.2;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .rules-popup {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .rules-popup {
+        padding: 40px 30px;
+    }
+
+    .rules-popup .air-close {
+        top: 37px;
+        right: 30px;
+    }
+
+    .rules-popup__list {
+        margin-top: 30px;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .rules-popup__list {
+        column-count: 1;
+    }
+
+    .select-region-form__title {
+        padding-right: 40px;
+    }
+}
