--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -15,6 +15,8 @@
 @import "cart";
 @import "delivery";
 @import "services";
+@import "recipe-card";
+@import "recipe";
 @import "footer";
 @import "buttons";
 @import "popups";
